--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.firebaseui:firebase-ui-database:3.3.1'
+
+    // Google
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    // Facebook
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 }
